# yandex_interview_training

./: CMakeLists.txt  readme.md
articles/: readme.md
articles/binary_trees_count/: CMakeLists.txt
articles/binary_trees_count/iterative/: main.cpp
articles/binary_trees_count/recursive/: main.cpp
articles/complicated_numbers/: main.cpp
articles/good_sequence/: input.txt  main.cpp
articles/max_damage/: input.txt
articles/purse_coins/: main.cpp
articles/split_number/: main.cpp
basics/inversion_count/: main.cpp
basics/merge_sort/: main.cpp
codeforce_beta_round_9/: CMakeLists.txt  readme.md
codeforce_beta_round_9/how_many_trees/: main.cpp
contest/: readme.md
contest/anagrams/: input.txt  main.cpp
contest/bracket_sequence_generator/: main.cpp
contest/interesting_travaling/: main.cpp
contest/remove_duplicates/: main.cpp
contest/rock_and_decoration/: main.cpp
contest/sequential_units/: input.txt  main.cpp
leetcode/four_sum/: main.cpp
leetcode/regular_expression_matching/: input.txt  main.cpp
other/: CMakeLists.txt
other/cash/: main.cpp
other/eq_subtrees/: main.cpp
other/k_similars/: main.cpp
other/seq_units_with_rm/: main.cpp
